// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// The descriptor servcie RPC proto definition.
// The source of truth of this proto can be found at https://github.com/project-chip/connectedhomeip/tree/master/examples/common/pigweed/protos
syntax = "proto3";

import "third_party/py/gazoo_device/protos/common.proto";

package chip.rpc;

message DeviceType {
  uint32 device_type = 1;
}

message Cluster {
  uint32 cluster_id = 1;
}

message Endpoint {
  uint32 endpoint = 1;
}

service Descriptor {
  // Gets a list of device types from an endpoint.
  rpc DeviceTypeList(Endpoint) returns (stream DeviceType){}

  // Gets a list of server application clusters from an endpoint.
  rpc ServerList(Endpoint) returns (stream Cluster){}

  // Gets a list of client application clusters from an endpoint.
  rpc ClientList(Endpoint) returns (stream Cluster){}

  // Gets a list of endpoints from a node endpoint.
  rpc PartsList(Endpoint) returns (stream Endpoint){}
}
